Edits to VTW chapter to put into past tense [END].

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -884,7 +884,7 @@ The three sets of positional data (planned route, MAX-6 recorded route and smart
 
 %This ability to control navigation within the 3D virtual environment without explicit conscious input of keyboard/mouse/touch commands is integral to reducing the cognitive load required to maintain a presence within a virtual environment which is a key requirement for overcoming the vacancy problem and achieving successful mobile cross reality.
 
-During the experiments the MAX-6 was unable to maintain reception of the additional correction data required for SBAS operation; when left stationary for several minutes reception was possible however subsequent movement of only a few meters at walking pace would reliably break the connection. This reduced the theoretical maximum performance of the unit to 2.5m CEP, with observed performance being lower.
+During the experiments the MAX-6 was unable to maintain reception of the additional correction data required for SBAS operation. When left stationary for several minutes reception was possible however subsequent movement of only a few meters at walking pace would reliably break the connection. This reduced the theoretical maximum performance of the unit to 2.5m CEP, with observed performance being lower.
 
 Figure \ref{vtw_all_routes.png} depicts an aerial view of the St Andrews cathedral ruins, oriented with North upwards; the blue line represents the planned route, red the route recorded by the MAX-6 receiver and green the route recorded by the smartphone while walking the planned route.
 
@@ -917,9 +917,11 @@ When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_al
 \label{vtw_all_routes_second_half.png}
 \end{figure}
 
-In addition to the accuracy of the position tracking it is also important to consider the frequency and granularity of these data. Even if the position data used by a freeform explorative parallel reality system were extremely accurate the experience of using that platform would be poor if these data were reported too infrequently, as it would either lead to `jumpy' movement where the virtual view had to move a substantial distance to match each newly reported real position or a reliance upon dead-reckoning to predict the user's movement between subsequent data. Likewise even with accurate and frequently reported position data, if the granularity of these data is not especially fine the experience of using the platform will be negatively impacted by an inability to make small real movements and see them reflected as similarly small virtual movements in order to pay attention to a specific aspect of the environments.
+In addition to the accuracy of the position tracking it is also important to consider the frequency and granularity of these data. Even if the position data used by a freeform explorative parallel reality system were extremely accurate the experience of using that platform would be poor if these data were reported too infrequently, as it would either lead to `jumpy' movement where the virtual view had to move a substantial distance to match each newly reported real position, or a reliance upon dead-reckoning to predict the user's movement between subsequent data. Likewise even with accurate and frequently reported position data, if the granularity of these data is not especially fine then the experience of using the platform will be negatively impacted by an inability to make small real movements and see them reflected as similarly small virtual movements when trying to pay attention to specific aspects of the environments.
 
-Throughout the test route the HTC One S reported only 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png} would have meant that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}. However in practise even though subsequent positions reported by the MAX-6 during tests when integrated into the VTW platform were usually no more than 1-3m away, when standing still with the VTW the MAX-6 would not `settle' and keep the virtual view in the same position, but would instead continue to report new positions within this 1-3m range. This resulted in the virtual view frequently moving even while the user was standing stationary in the real world.
+Throughout the test route the HTC One S reported only 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png} would have meant that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents in any sort of freeform exploration scenario. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}.
+
+However when the MAX-6 readings were integrated into the VTW platform and it was tested in its complete form at the cathedral, even though subsequent positions reported by the MAX-6 were usually no more than 1-3m away, they did not `settle' and keep the virtual view in the same position when standing still. Instead new readings in this 1-3m range would continue to be reported and the virtual view would continue to move even while the user was standing stationary in the real world.
 
 \begin{figure}[h]
 \centering
@@ -936,7 +938,7 @@ Throughout the test route the HTC One S reported only 27 positions. This would h
 
 \subsection{Graphical Performance}
 
-VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position are lower than that of the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and have been faithfully reconstructed in the virtual model.
+VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position during testing at the cathedral site. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
 
 \begin{figure}[h]
 	\centering
@@ -945,9 +947,9 @@ VTW averaged framerates between 20 and 25 frames per second (fps) with the modif
 	\label{vtw-framerates.png}
 \end{figure}
 
-The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters [20], but overall user experience would nonetheless be improved by a higher frame rate. It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and has not been optimized for use on less powerful mobile platforms such as the tablet used by VTW.
+The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters [20], but overall user experience would nonetheless have been improved by a higher frame rate. It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW.
 
-The accuracy of the camera control during the experiments was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates.
+The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates.
 
 %=========================================================================================================
 
@@ -957,13 +959,13 @@ When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the
 
 Considering the first scenario of static viewpoints this level of positional accuracy is plenty sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
-Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size, this level of accuracy is sufficient for some freeform exploration. For example when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not pose much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
+Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, nor to examine an object closely when standing still due to the manner in which the position data did not `settle', when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size this level of accuracy is sufficient for some freeform exploration. For example when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not pose much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
 
 \begin{quote}
 	\textit{``Our user study results suggest that Indirect AR does very well in outdoor applications where the user is more than a few meters away from the physical objects of interest.''}~\cite{Wither2011}
 \end{quote}
 
-Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy of VTW renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several metres to one side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few meters in the manner that scenario 3 envisages would be unworkable in this manner.
+Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy of VTW and its tendency not to settle renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several metres to one side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few meters in the manner that scenario 3 envisages would be unworkable in this manner.
 
 %The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit from better graphical quality and higher responsiveness to changes in user orientation.
 
@@ -981,12 +983,14 @@ Revisiting the definition of parallel reality, one can consider it to be disting
 	\item The experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of using the system falls short of the ideal realisation of the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, one also perceives the real environment around it filling the majority of the viewport. This experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With both the sitsim projects and VTW the user's view is always a mix, never purely virtual, and the position upon the locus of attention axis can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment whereas with an immersive VR display such as a HMD \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms clarifies how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
+Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport. The experience was more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
+
+Both with previous sitsim projects and VTW the user's view is always a mix, never purely virtual, and the user's position upon the locus of attention axis can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms may clarify how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
 %=========================================================================================================
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality proposed.
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW provided a real world assessment of the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality proposed.
 
 %=========================================================================================================
