--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -21,6 +21,8 @@ This chapter discusses the design and development of a parallel reality platform
 
 %=========================================================================================================
 
+%With a display technology such as an immersive VR HMD however, \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}.
+
 \section{Overview}
 The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view things from some distance from where the inaccuracy of positioning is not apparent.
 
